fix(frontend): align header image with links

--- a/frontend/scss/special.scss
+++ b/frontend/scss/special.scss
@@ -7,6 +7,7 @@ header {
 
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 2rem;
 
   border-bottom: var(--color-light) 2px solid;
@@ -19,6 +20,10 @@ header {
       width: max(33%, 128px);
       margin: 0 auto;
     }
+  }
+
+  & img {
+    height: 100%;
   }
 
   & nav {
